package dev.fredpena.designpattern.creational.builder;

/**
 * @author me@fredpena.dev
 * @created 11/09/2025  - 23:16
 */
public class SportEngine implements Engine {
    @Override
    public String specs() {
        return "SportEngine 3.0L Twin-Turbo, 450 HP";
    }
}